--- a/buy_anything/frontend/static/frontend/css/index.css
+++ b/buy_anything/frontend/static/frontend/css/index.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 10%;
+  height: 0;
   margin: 0;
   padding: 0;
 }
@@ -9,7 +9,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  left: 10;
+  left: 0;
   top: 0;
 }
 
@@ -18,4 +18,23 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
+}
+
+.app {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+}
+
+.login-form {
+  padding-top: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.submit {
+  text-align: center;
 }
