--- a/buy_anything/frontend/templates/index.html
+++ b/buy_anything/frontend/templates/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'frontend/css/index.css' %}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'frontend/css/index.css' %}"
+    />
     <title>BuyAnything</title>
     <!-- <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}" /> -->
   </head>
@@ -12,7 +16,6 @@
     <div id="main">
       <div id="app"></div>
     </div>
-
-    <script src="{% static "frontend/js/main.js" %}"> </script>
+    <script src="{% static 'frontend/js/main.js' %}"></script>
   </body>
 </html>
