--- a/buy_anything/templates/email_confirmation.html
+++ b/buy_anything/templates/email_confirmation.html
@@ -1,9 +1,6 @@
 {% autoescape off %}
 
- Welcome to BuyAnything - Django Login!!
- Hello {{ name }}!!
- Please confirm your email by clicking on the following link.
-
- Confirmation Link: http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+ You have Activated your account
+ Welcome to BuyAnything
 
  {% endautoescape %}
